--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "webpack --config webpack.config.js",
     "dev": "SET DEBUG=webserver:* & npm start nodemon -e js,twig,scss,json -L ./bin/www"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -17,6 +17,8 @@
     "twig": "~0.10.3"
   },
   "devDependencies": {
+    "node-sass": "^4.14.1",
+    "nodemon": "^2.0.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
