--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^3.5.7",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
     "twig": "~0.10.3"
