--- a/package.json
+++ b/package.json
@@ -20,9 +20,6 @@
     "uniqid": "^5.2.0"
   },
   "devDependencies": {
-    "node-sass": "^4.14.1",
-    "nodemon": "^2.0.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^4.43.0"
   }
 }
