--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "mongodb": "^3.5.7",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "node-sass-middleware": "0.11.0",
     "twig": "~0.10.3",
     "uniqid": "^5.2.0"
